--- a/meta/main.yml
+++ b/meta/main.yml
@@ -17,6 +17,6 @@ galaxy_info:
       versions:
         - 20.04
 
-  galaxy_tags: [hostname]
+  galaxy_tags: [hostname, dns, system]
 
 dependencies: []
