--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -18,6 +18,12 @@ platforms:
     memory: 2048
     cpus: 2
     provision: true
+  - name: hostnamearchlinux
+    box: archlinux/archlinux
+    box_version: 2020.06.03
+    memory: 4096
+    cpus: 4
+    provision: true
 provisioner:
   name: ansible
   config_options:
