--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,27 @@
 ---
+- name: include os dependent variables
+  include_vars: "{{ item }}"
+  with_first_found:
+    - files:
+        - "{{ ansible_distribution | lower }}{{ ansible_distribution_major_version }}.yml"
+        - "{{ ansible_distribution | lower }}.yml"
+        - "{{ ansible_os_family | lower }}.yml"
+        - main.yml
+      skip: True
+  tags:
+    - hostname_all
+    - hostname_configure
+
+- name: import preflight.yml
+  import_tasks: preflight.yml
+  become: true
+  tags:
+    - hostname_all
+    - hostname_configure
+
 - name: import hostname.yml
   import_tasks: hostname.yml
   become: true
   tags:
-    hostname_all
+    - hostname_all
+    - hostname_configure
